--- a/chaincode/land-chaincode-javascript/package.json
+++ b/chaincode/land-chaincode-javascript/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "fabric-chaincode-node start"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fabric-contract-api": "^2.2.2"
+    "fabric-contract-api": "^2.2.2",
+    "fabric-shim": "^2.2.2"
   }
 }
